{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 34,
  "lineage": "026040c7-45d0-560d-b7ab-a825718f2f54",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GameHighlights-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125299414:internet-gateway/igw-0dc0c5e73a1826648",
            "id": "igw-0dc0c5e73a1826648",
            "owner_id": "211125299414",
            "tags": {
              "Name": "GameHighlights-IGW"
            },
            "tags_all": {
              "Name": "GameHighlights-IGW"
            },
            "vpc_id": "vpc-0d760a8a22dee7588"
          },
          "dependencies": [
            "aws_vpc.GameHighlights-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dc0c5e73a1826648",
            "id": "r-rtb-0cbde68460bcd0c691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cbde68460bcd0c69",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GameHighlights-IGW",
            "aws_route_table.GameHighlights_RT",
            "aws_vpc.GameHighlights-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "GameHighlights_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125299414:route-table/rtb-0cbde68460bcd0c69",
            "id": "rtb-0cbde68460bcd0c69",
            "owner_id": "211125299414",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc0c5e73a1826648",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "GameHighlights_RT"
            },
            "tags_all": {
              "Name": "GameHighlights_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d760a8a22dee7588"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.GameHighlights-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "GameHighlights_RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125299414:route-table/rtb-028f83edb458ff605",
            "id": "rtb-028f83edb458ff605",
            "owner_id": "211125299414",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "GameHighlights_RT2"
            },
            "tags_all": {
              "Name": "GameHighlights_RT2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d760a8a22dee7588"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.GameHighlights-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006da939766011a39",
            "route_table_id": "rtb-0cbde68460bcd0c69",
            "subnet_id": "subnet-0bee0afbc777f4323"
          },
          "dependencies": [
            "aws_route_table.GameHighlights_RT",
            "aws_subnet.public_subnet",
            "aws_vpc.GameHighlights-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f60e21f05da885a3",
            "route_table_id": "rtb-028f83edb458ff605",
            "subnet_id": "subnet-094c7103f60a90186"
          },
          "dependencies": [
            "aws_route_table.GameHighlights_RT2",
            "aws_subnet.private_subnet",
            "aws_vpc.GameHighlights-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "GameHighlights-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125299414:security-group/sg-03262cfdb93ac42be",
            "description": "Allow HTTPS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03262cfdb93ac42be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "GameHighlights-SG",
            "name_prefix": "",
            "owner_id": "211125299414",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GameHighlights-SG"
            },
            "tags_all": {
              "Name": "GameHighlights-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d760a8a22dee7588"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.GameHighlights-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125299414:subnet/subnet-094c7103f60a90186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094c7103f60a90186",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125299414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0d760a8a22dee7588"
          },
          "dependencies": [
            "aws_vpc.GameHighlights-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125299414:subnet/subnet-0bee0afbc777f4323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bee0afbc777f4323",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125299414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0d760a8a22dee7588"
          },
          "dependencies": [
            "aws_vpc.GameHighlights-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "GameHighlights-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125299414:vpc/vpc-0d760a8a22dee7588",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056332c6a563c8c76",
            "default_route_table_id": "rtb-00b4a55cefff03af2",
            "default_security_group_id": "sg-0b88824937dcbaea8",
            "dhcp_options_id": "dopt-0ef400e91b090cc7e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d760a8a22dee7588",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b4a55cefff03af2",
            "owner_id": "211125299414",
            "tags": {
              "Name": "GameHighlights-VPC"
            },
            "tags_all": {
              "Name": "GameHighlights-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125299414:security-group-rule/sgr-02d6b0f4d98a2930d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02d6b0f4d98a2930d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03262cfdb93ac42be",
            "security_group_rule_id": "sgr-02d6b0f4d98a2930d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.GameHighlights-SG",
            "aws_vpc.GameHighlights-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125299414:security-group-rule/sgr-0298b1cfb46fe7888",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0298b1cfb46fe7888",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03262cfdb93ac42be",
            "security_group_rule_id": "sgr-0298b1cfb46fe7888",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.GameHighlights-SG",
            "aws_vpc.GameHighlights-VPC"
          ]
        }
      ]
    }
  ]
}